# loro-swift

./: .gitignore  .gitmodules  .spi.yml  Package.swift  README.md
.github/workflows/: ci.yaml  pre-release.yaml  release-on-merge.yaml  release.yaml
Sources/Loro/: Container.swift  Ephemeral.swift  Event.swift  Loro.swift  LoroFFI.swift  Value.swift  Version.swift  loroFFI.swift
Sources/Loro/Loro.docc/: GettingStarted.md  Loro.md  VersioningAndSync.md  WorkingWithCounters.md  WorkingWithLists.md  WorkingWithMaps.md  WorkingWithText.md  WorkingWithTrees.md
Sources/LoroFFI/: module.modulemap
Sources/LoroFFI/include/: loroFFI.h
Tests/LoroTests/: EphemeralStoreTests.swift  LoroTests.swift  Undo.swift
loro-rs/: Cargo.toml  build.rs  uniffi.toml
loro-rs/src/: impl_udl.rs  json_bk.udl  lib.rs  loro.udl
loro-swift/: Cargo.toml
loro-swift/src/: lib.rs
scripts/: build_artifactbundle.ps1  build_artifactbundle.sh  build_linux.sh  build_macos.sh  build_swift_ffi.sh  build_windows.ps1  refine_trait.sh
