[package]
name = "loro-swift"
version = "0.16.2"
edition = "2021"

[lib]
name = "loro"
crate-type = ["cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"


[dependencies]
loro-ffi = { path = "../../loro/crates/loro-ffi" }
# loro-ffi = { git = "https://github.com/loro-dev/loro.git", rev = "a9f669d173807b80dde7ffef7f467c8a57fc5b1f" }
uniffi = { version = "0.28" }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
cli = ["uniffi/cli"]
