[package]
name = "loro-swift"
version = "1.1.3"
edition = "2021"

[lib]
name = "loro"
crate-type = ["cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"


[dependencies]
# loro-ffi = { path = "../../loro/crates/loro-ffi" }
loro-ffi = { git = "https://github.com/loro-dev/loro.git", branch = "main" }
uniffi = { version = "0.28.3" }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[features]
cli = ["uniffi/cli"]
