[package]
name = "loro-swift"
version = "1.10.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
loro-ffi = { path = "../../loro-ffi" }
uniffi = { version = "0.31.1" }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[features]
cli = ["uniffi/cli"]
